# OSMImport

./: .gitignore  .tm_properties  Dockerfile  LICENSE  Makefile  OSMImport.cabal  OSMImport.nix  OSMImport.sublime-project  README.md  build-platform.sh  cabal.config  environment.sh  osmimport-env.nix  prerequisits.sh  stack.yaml
config/launchd/: osmimport-db.plist  osmimport-mongodb.plist  osmimport-redis.plist
config/redis/: redis.conf
docker/: Dockerfile
etc/: build-data.sh  buildSearchCollection.js  dbscripts.js  fileformat.proto  import-data.sh  osmformat.proto
patches/protocol-buffers-2.0.17/Text/ProtocolBuffers/: Identifiers.hs
src/: Common.hs  Database.hs  Dto.hs  Importer.hs  Main.hs  OSMFormat.hs  Redis.hs  Types.hs
src/Data/: Node.hs  Relation.hs  Tag.hs  Way.hs
src/OSM/: FileFormat.hs  OSMFormat.hs
src/OSM/FileFormat/: Blob.hs  BlockHeader.hs
src/OSM/OSMFormat/: ChangeSet.hs  DenseInfo.hs  DenseNodes.hs  HeaderBBox.hs  HeaderBlock.hs  Info.hs  Node.hs  PrimitiveBlock.hs  PrimitiveGroup.hs  Relation.hs  StringTable.hs  Way.hs
src/OSM/OSMFormat/Relation/: MemberType.hs
