name:                OSMImport
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             2.0.0.2
synopsis:            Application to import the Open Street Map Protocol Buffer format into MongoDB
license:             MIT
license-file:        LICENSE
author:              Matthew Brown
maintainer:          matt@ederoyd.co.uk
category:            Database
build-type:          Simple
Cabal-version:       >=1.18

Executable OSMImport
    hs-source-dirs: src
    main-is: Main.hs

  Build-depends:
    base,
    bytestring,
    binary,
    text >= 1.2.1.3,
    cereal >= 0.4.1.1,
    zlib >= 0.5.4.2,
    mtl >= 2.2.1,
    mongoDB >= 2.0.6,
    split >= 0.2.2,
    protocol-buffers >= 2.1.4,
    protocol-buffers-descriptor >= 2.1.4,
    utf8-string >= 1.0.1,
    MissingH >= 1.3.0.1

  -- ghc-options: -O2 -auto-all -rtsopts -with-rtsopts=-H4096m -threaded
  ghc-options: -O2 -rtsopts -threaded

  default-language: Haskell2010

  -- default-extensions: DeriveGeneric

  -- Modules not exported by this package.
  -- Other-modules:

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:
