name:                OSMImport
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             2.0.0.2
synopsis:            Application to import the Open Street Map Protocol Buffer format into MongoDB
license:             MIT
license-file:        LICENSE
author:              Matthew Brown
maintainer:          matt@ederoyd.co.uk
category:            Database
build-type:          Simple
Cabal-version:       >=1.22

Executable OSMImport
    hs-source-dirs: src
    main-is: Main.hs

  Build-depends:
    base,
    bytestring,
    binary,
    text,
    cereal,
    zlib,
    mtl,
    mongoDB,
    split,
    protocol-buffers,
    protocol-buffers-descriptor,
    utf8-string,
    MissingH

  default-language: Haskell2010



  -- Modules not exported by this package.
  Other-modules:
    Common
    Types
    Database
    Importer
    OSM.FileFormat.Blob
    OSM.FileFormat.BlockHeader
    OSM.OSMFormat.ChangeSet
    OSM.OSMFormat.DenseInfo
    OSM.OSMFormat.DenseNodes
    OSM.OSMFormat.HeaderBBox
    OSM.OSMFormat.HeaderBlock
    OSM.OSMFormat.Info
    OSM.OSMFormat.Node
    OSM.OSMFormat.PrimitiveBlock
    OSM.OSMFormat.PrimitiveGroup
    OSM.OSMFormat.Relation
    OSM.OSMFormat.Relation.MemberType
    OSM.OSMFormat.StringTable
    OSM.OSMFormat.Way
